<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenAuth</string>
    <string name="welcome">Welcome</string>
    <string name="connect">Connect</string>
    <string name="go_back">Go back</string>
    <string name="back">Back</string>
    <string name="visit_our_website">Visit our website</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="portuguese">Portuguese</string>
    <string name="verify">Verify</string>
    <string name="send">Send</string>
    <string name="enter_otp_number">Enter OTP Number</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="generate">Generate QR Code</string>
    <string name="name">Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_pre_shared_key">Enter Pre-Shared Key</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be more than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome2">welcome</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="enter_url_here">Enter URL Here</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="sign_in">Sign in</string>
    <string name="url">URL</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="remember_me">Remember me</string>
    <string name="biometric_failed">Fingerprint not recognized</string>
    <string name="waiting_for_auth">Waiting for authentication...</string>
    <string name="no_registered_details">No registered details</string>
    <string name="press_back_again">Press again to exit</string>
    <string name="url_invalid">URL is not valid</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="need_permission">Need permission</string>
    <string name="success">Success !</string>
    <string name="not_recognized">not recognized</string>
    <string name="no_fingerprint">No fingerprint saved</string>
    <string name="no_finger_reader">No fingerprint reader detected</string>
    <string name="disconnect">Disconnect</string>
    <string name="server">Server</string>
    <string name="onboarding">Onboarding Name</string>
    <string name="version">Version</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no">No, deny</string>
    <string name="yes">Yes, Approve</string>
    <string name="enter_key">Enter the code that was sent to your Email</string>
    <string name="verify_yourself">Verify yourself</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="help">Help</string>
    <string name="connected">Connected</string>
    <string name="show_otp">show OTP</string>
    <string name="ip_add">IP Address</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="system_text">System</string>
    <string name="help_screen_one_header">Stronger security with OpenAuth</string>
    <string name="help_screen_one_body">Get verification codes for all your accounts using 2-Step Verification</string>
    <string name="help_screen_two_header">Simple setup and biometric authentication available</string>
    <string name="help_screen_two_body">Set up the app with your account and keep it logged in securely with fingerprint</string>
    <string name="help_screen_three_header">A unique code used to sign in</string>
    <string name="help_screen_three_body">When using 2-Step Verification, a unique code from this app will be generated every 30 seconds</string>
    <string name="finish">Finish</string>
    <string name="your_otp_is">"Your OTP is: "</string>
    <string name="authenticator_app">Authenticator app</string>
    <string name="server_name_copied">Copied Server Name</string>
    <string name="hide_otp">Hide OTP</string>
</resources>
