<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyback"
    tools:context=".VerificationActivity">

    <ImageView
        android:id="@+id/topBack5"
        android:layout_width="0dp"
        android:layout_height="227dp"
        android:tint="@color/colorPrimary"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/primarybackground" />

    <ImageView
        android:id="@+id/bottomBack5"
        android:layout_width="374dp"
        android:layout_height="660dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:scaleType="centerCrop"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBack5"
        app:srcCompat="@drawable/bottomrear" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="397dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/fira_sans"
        android:singleLine="false"
        android:soundEffectsEnabled="false"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFF8F8"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/appLogo5"
        android:layout_width="166dp"
        android:layout_height="206dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262"
        app:srcCompat="@drawable/opencloudfactorylogo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="217dp"
        android:layout_height="64dp"
        android:fontFamily="@font/fira_sans"
        android:gravity="center_horizontal|center_vertical"
        android:scrollHorizontally="false"
        android:text="@string/enter_key"
        android:textAllCaps="false"
        android:textColor="#090808"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.269" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans"
        android:text="@string/verify_yourself"
        android:textAllCaps="true"
        android:textColor="#090808"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo5"
        app:layout_constraintVertical_bias="0.135" />

    <EditText
        android:id="@+id/codeBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/fira_sans"
        android:hint="@string/enter_your_code"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.247" />

    <Button
        android:id="@+id/verifyBtn"
        android:layout_width="95dp"
        android:layout_height="49dp"
        android:background="@drawable/basicbutton"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/fira_sans"
        android:text="@string/verify"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeBox"
        app:layout_constraintVertical_bias="0.363" />

</androidx.constraintlayout.widget.ConstraintLayout>